@@ -17,6 +17,7 @@ public class Main {
 
     ArrayList<Object2d> objects = new ArrayList<>();
     ArrayList<Rectangle> objectsRectangle = new ArrayList<>();
+    ArrayList<Bintang> objectsBintang = new ArrayList<>();
 
     ArrayList<Circle> objectsCircle = new ArrayList<>();
 
@@ -25,74 +26,30 @@ public class Main {
         GL.createCapabilities();
         //jika buat harus dibuat dibawah GL.createCapabilities
         //code
+            objectsCircle.add(new Circle(
+                Arrays.asList(
+                    new ShaderProgram.ShaderModuleData("resources/shaders/scene.vert",GL_VERTEX_SHADER)
+                    ,new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag",GL_FRAGMENT_SHADER)
+                ), new ArrayList<>(
+                    List.of(
+                    )
+                ),
+                new Vector4f(0.0f,1.0f,1.0f,1.0f),
+                0.7,0,0
+            )
+        );
 
-//        objects.add(new Object2d(
-//                Arrays.asList(
-//                    new ShaderProgram.ShaderModuleData("resources/shaders/scene.vert",GL_VERTEX_SHADER)
-//                    ,new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag",GL_FRAGMENT_SHADER)
-//                ), new ArrayList<>(
-//                    List.of(
-//                        new Vector3f(0.0f,0.5f,0.0f),
-//                        new Vector3f(-0.5f,-0.5f,0.0f),
-//                        new Vector3f(0.5f,-0.5f,0.0f)
-//                    )
-//                ),
-//                new Vector4f(0.0f,1.0f,1.0f,1.0f)
-//            )
-//        );
-        //with vertices color
-//        objects.add(new Object2d(
+//        objectsBintang.add(new Bintang(
 //                        Arrays.asList(
-//                            new ShaderProgram.ShaderModuleData("resources/shaders/sceneWithVerticesColor.vert",GL_VERTEX_SHADER)
-//                            ,new ShaderProgram.ShaderModuleData("resources/shaders/sceneWithVerticesColor.frag",GL_FRAGMENT_SHADER)
+//                                new ShaderProgram.ShaderModuleData("resources/shaders/scene.vert",GL_VERTEX_SHADER)
+//                                ,new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag",GL_FRAGMENT_SHADER)
 //                        ), new ArrayList<>(
-//                            List.of(
-//                                new Vector3f(0.0f,0.5f,0.0f),
-//                                new Vector3f(-0.5f,-0.5f,0.0f),
-//                                new Vector3f(0.5f,-0.5f,0.0f)
-//                            )
-//                        ), new ArrayList<>(
-//                                List.of(
-//                                        new Vector3f(1.0f,0.0f,0.0f),
-//                                        new Vector3f(0.0f,1.0f,0.0f),
-//                                        new Vector3f(0.0f,0.0f,1.0f)
-//                                )
-//                        )
+//                        List.of()
+//                        ),
+//                        new Vector4f(0.0f,1.0f,1.0f,1.0f),
+//                        0.5,0,0,Arrays.asList(0, 3, 3, 1, 1, 4, 4, 2, 2, 0)
 //                )
 //        );
-//        objectsCircle.add(new Circle(
-//                Arrays.asList(
-//                    new ShaderProgram.ShaderModuleData("resources/shaders/scene.vert",GL_VERTEX_SHADER)
-//                    ,new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag",GL_FRAGMENT_SHADER)
-//                ), new ArrayList<>(
-//                    List.of(
-//                        new Vector3f(0.0f,0.0f,0.0f),
-//                        new Vector3f(0.5f,0.0f,0.0f),
-//                        new Vector3f(0.0f,0.5f,0.0f),
-//                        new Vector3f(0.5f,0.5f,0.0f)
-//                    )
-//                ),
-//                new Vector4f(0.0f,1.0f,1.0f,1.0f),
-//                0.7,0,0
-//            )
-//        );
-
-        objectsCircle.add(new Circle(
-                        Arrays.asList(
-                                new ShaderProgram.ShaderModuleData("resources/shaders/scene.vert",GL_VERTEX_SHADER)
-                                ,new ShaderProgram.ShaderModuleData("resources/shaders/scene.frag",GL_FRAGMENT_SHADER)
-                        ), new ArrayList<>(
-                        List.of(
-                                new Vector3f(0.0f,0.0f,0.0f),
-                                new Vector3f(0.5f,0.0f,0.0f),
-                                new Vector3f(0.0f,0.5f,0.0f),
-                                new Vector3f(0.5f,0.5f,0.0f)
-                        )
-                ),
-                        new Vector4f(0.0f,1.0f,1.0f,1.0f),
-                        0.5,0,0,Arrays.asList(0,1,1,2,2,3,3,4,4,0)
-                )
-        );
     }
 
     public void loop(){
@@ -103,12 +60,12 @@ public class Main {
             GL.createCapabilities();
             //code
             //dibawah createcapabilities
-//            for(Object2d object:objects){
-//                object.drawwithVerticesColor();
-//            }
-            for(Circle object2:objectsCircle){
-                object2.drawBintang();
+            for(Circle object:objectsCircle){
+                object.draw();
             }
+//            for(Bintang object2:objectsBintang){
+//                object2.draw();
+//            }
 
 
             //diatas disablevertex+pollevent
